--- a/style.css
+++ b/style.css
@@ -2,3 +2,23 @@
     margin: 0;
     padding: 0;
 }
+.wel{
+    background-color: greenyellow;
+    text-align: justify;
+}
+.welcome {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align: center;
+    margin: 10px 0;
+    padding: 10px 0;
+    font-weight: 1200;
+}
+.welcome-message {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size:larger;
+    margin: 10px 0;
+    padding: 20px 180px;
+    font-weight:600;
+
+
+}
